gitlab/ingress-gitlab.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gitlab-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - gitlab.dev.conalep.mx
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: gitlab-cert # This should match the Certificate secretName
    hosts:
    - gitlab.dev.conalep.mx # This should match a DNS name in the Certificate
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitlab-vservice
  namespace: default
spec:
  gateways:
  - gitlab-gateway
  hosts:
  - gitlab.dev.conalep.mx
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gitlab-webservice-default
        port:
          number: 8181
  - match:
    - uri:
        prefix: /admin/sidekiq/
    route:
    - destination:
        host: gitlab-webservice-default
        port:
          number: 8080
